--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-design-utility": "^0.0.30",
     "react-native-elements": "^1.1.0",
     "react-native-ionicons": "^4.5.5",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "2.11.2"
   },
   "devDependencies": {
